--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -40,6 +40,7 @@ jobs:
         with:
           context: .
           push: true
+          no-cache: true
           tags: |
             ghcr.io/woohyeondev/tube-standard-web:${{ github.sha }}
             ghcr.io/woohyeondev/tube-standard-web:latest
